# visualization

./: .gitignore  .golangci.yml  .gomarkdoc.yml  .prettierignore  .prettierrc  404.html  CHANGELOG.md  CLAUDE.md  Makefile  README.md  buf.gen.go.yaml  buf.gen.typescript.yaml  buf.gen.yaml  buf.yaml  bugs.md  eslint.config.js  go.mod  go.sum  go.work  go.work.sum  index.html  knip.config.ts  package.json  perf.md  playwright.config.ts  pnpm-lock.yaml  sitemap-0.xml  sitemap-index.xml  svelte.config.js  tailwind.config.ts  threlte.md  tsconfig.json  vite.config.ts  vitest-setup-client.ts
.changeset/: README.md  added-camera-widget.md  afraid-candles-listen.md  afraid-carrots-knock.md  afraid-ducks-walk.md  afraid-tigers-design.md  all-tips-see.md  better-ducks-like.md  blue-crews-remain.md  breezy-paths-hug.md  breezy-zoos-sell.md  brown-cows-fail.md  brown-hotels-lay.md  brown-taxes-tap.md  bumpy-knives-give.md  bumpy-stamps-tell.md  busy-loops-fix.md  calm-doors-pretend.md  calm-experts-pull.md  calm-maps-run.md  calm-tips-add.md  chatty-bottles-pay.md  chatty-files-teach.md  chilly-hotels-give.md  chilly-ligers-decide.md  chubby-bugs-grow.md  clean-maps-live.md  clever-chairs-float.md  clever-jobs-smile.md  cold-suns-hide.md  cool-apples-throw.md  cool-icons-enjoy.md  cozy-apes-roll.md  cozy-wasps-rule.md  crisp-peaches-beg.md  crisp-spies-pick.md  cuddly-hounds-sit.md  cuddly-news-admire.md  curly-carpets-rescue.md  curly-tips-show.md  (+246 more)
.claude/: settings.ci.json
bridge/: actions.json  (+6 more)
src/lib/wasm/pcd-processor/: Cargo.toml
src/lib/wasm/pcd-processor/src/: lib.rs
(+2247 files in other folders)
