[package]
name = "pcd-processor-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies.wee_alloc]
version = "0.4"
optional = true

[features]
default = ["console_error_panic_hook"]